# testdisk-grpc-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.loongarch64  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  docker-build.sh
cmake/: FindgRPC.cmake  ProtobufGrpc.cmake
examples/: client_example.cpp  client_example.py  shutdown_client.cpp  shutdown_client.py
include/: photorec_api.h
proto/: photorec.proto  testdisk.proto
src/: logger.cpp  logger.h  main.cpp  photorec_grpc_server.cpp  photorec_grpc_server.h  testdisk_grpc_server.cpp  testdisk_grpc_server.h
